# zaowr-py-package

./: .gitignore  Makefile  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt  test.txt
.github/workflows/: create_release.yml  docs.yml  pytest.yml
docs/: DEV_TUTORIAL.md  FSTRING_FORMATTING.md  TODO.md  USAGE.md  USAGE_ENTRY_TEMPLATE.md  USE_CASES.md  WINDOWS.md
src/zaowr_polsl_kisiel/: __init__.py  are_params_valid.py  calibrate_camera.py  example.py  exceptions.py  find_aruco_dict.py  load_calibration.py  load_rectification_maps.py  load_stereo_calibration.py  main.py  remove_distortion.py  save_calibration.py  stereo_calibrate.py  stereo_rectify.py
src/zaowr_polsl_kisiel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/zaowr_polsl_kisiel/calibration/: __init__.py  calibrate_camera.py  stereo_calibrate.py  stereo_calibration.py
src/zaowr_polsl_kisiel/content_loaders/: __init__.py  are_params_valid.py  load_calibration.py  load_dept_map_calibration.py  load_depth_map_calibration.py  load_pfm_file.py  load_pgm_file.py  load_rectification_maps.py  load_stereo_calibration.py  save_calibration.py  save_disparity_map.py  write_ply_file.py
tests/: charuco.py  example.py  stereo_calibration_params.json
tests/calibration_params/: calibration_params.json  calibration_params_left.json  calibration_params_no_subpix.json  calibration_params_right.json  calibration_params_right_charuco.json
tests/charuco_tests/: mono_camera_w_charuco.py  single_camera_w_charuco.py  stereo_camera_w_charuco.py  test_charuco.py
tests/kolokwium/: main.py
tests/lab_exercise_solutions/: lab_1.py  lab_2.py  lab_3.py  lab_4.py  lab_5.py
tests/misc/: tqdm_test.py
tests/unit_tests/: test_calibrate_camera.py  test_remove_distortion.py  test_stereo_calibration.py  test_stereo_rectify.py
(+54 files in other folders)
